# FIT.HCMUS

./: .eslintrc.cjs  README.md  index.html
1-NMLT/Final/: temp.cpp  temp2
1-NMLT/Final/23120264/: Makefile  main.cpp
1-NMLT/FinalTheory/: temp  temp.cpp
1-NMLT/FinalTheory/CLC23/: 02.cpp  03.cpp  04  04.cpp  input.txt  output.txt
1-NMLT/FinalTheory/CQ2023/: 01.cpp  02.cpp  04.cpp  INPUT.txt
1-NMLT/Lab_06/: Makefile
10-Java/bankAccount/: BankAccount.java  Main.java
10-Java/book/: Book.java  Main.java
11-CSharp/23120264/: Program.cs
11-CSharp/ConsoleApp1/: ConsoleApp1.sln
5-CSDL/LabN5-N6/: N6-Ca3-23120264-Procedures.sql
5-CSDL/LabN5-N6-O5/: N5-Ca3-23120264-Procedures.sql  N6-Ca3-23120264-Procedures.sql
5-CSDL/LabO5/: O5-Trigger-Ca3-23120264.sql
6-OOP/ITUS/: main  main.cpp
6-OOP/Lab-Final/: 23120264.cpp
6-OOP/W08/BT04/: CMakeLists.txt
6-OOP/W08/BT04/src/: Circle.cpp  Circle.h  GeomatryFactory.cpp  Geometry.h  GeometryFactory.h  GeometryManagement.cpp  GeometryManagement.h  GeometryRegistry.h  Rectangle.cpp  Rectangle.h  RightTrapezoid.cpp  RightTrapezoid.h  ShapeType.h  Triangle.cpp  Triangle.h  main.cpp
7-cs102/: note.md
7-cs102/DemoMobileApp/: local.properties
7-cs102/DemoWeb/: README.md  index.html  package-lock.json
8-PPT/: 01-PTSieuViet.py  02-HPTDSTT.py  03-DaThucNoiSuy.py  04-SplineAndBPNN.py  05-DaoHam.py  06-TichPhan.py  07-PhuongTrinhViPhan.py  tempCodeRunnerFile.py
8-PPT/Final/: 23120264-CuoiKy-BlockDiagram.docx  TK-23120264_CuoiKy.py  temp.py  ~$120264-CuoiKy-BlockDiagram.docx
9-Web/1-HTML/: style.css
src/: App.jsx
(+237 files in other folders)
